--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap'); 
+
+* {
+	font-family: 'Roboto', sans-serif;
+	--color-primary-dark: #4F518C;
+	--color-primary-light: #EBEBEE;
+	--color-secondary-light: #7FDEFF;
+	--spacing: 1em;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -7,8 +17,8 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
+	font-size: 18px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
@@ -49,7 +59,7 @@ input[type="range"] {
 
 button {
 	color: #333;
-	background-color: #f4f4f4;
+	background-color: var(--color-secondary-light);
 	outline: none;
 }
 
