--- a/public/global.css
+++ b/public/global.css
@@ -8,6 +8,10 @@
 	--spacing: 1em;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -17,7 +21,6 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-	box-sizing: border-box;
 	font-size: 18px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
